# seam

./: Cargo.toml  bus_error.clif  todo.md
src/: backend.rs  foo.cpi  foo.flea  main.rs  parser.rs  semantic.rs
tests/: foo.sm  tests.sm
