[package]
name = "flea"
version = "0.1.0"
authors = ["Chad Russell <chad@theexperienceengine.com>"]
edition = "2018"

[dependencies]
string-interner = "0.7.1"
cranelift = "0.56.0"
cranelift-module = "0.56.0"
cranelift-simplejit = "0.56.0"
lazy_static = "1.4.0"
scopeguard = "1.0.0"
crossbeam-utils = "0.7.0"
smallvec = "1.2.0"

[profile.release]
debug = true
